--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>This is Home Page...</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+    <div class="container mt-4 mb-4">
+        <h1>Cab Booking Web App</h1>
+    </div>
+{% endblock content %}
