--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale=1, shrink-to-fit=np">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="{{ 'static/css/style.css' }}">
 
     </head>
     <body>
-     {% include 'navbar.html' %}
+    {% include 'navbar.html' %}
     {% block content %}
 
     {% endblock content %}
