--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">List</a>
+                    <a class="nav-link active" aria-current="page" href="/list">List</a>
                 </li>
                  <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/book_cab">Booking Form</a>
