--- a/templates/list.html
+++ b/templates/list.html
@@ -13,7 +13,7 @@
         </form>
 
         <table class="table table-striped table-hover">
-            <thead>
+            <thead class="table-dark">
                 <tr class="table-active">
                     <th>No</th>
                     <th>DATE</th>
