--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,7 @@
                     <a class="nav-link active" aria-current="page" href="/book_cab">Booking Form</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">About</a>
+                    <a class="nav-link" aria-current="page" href="{{ url_for('about') }}">About</a>
                 </li>
             </ul>
         </div>
