--- a/templates/search.html
+++ b/templates/search.html
@@ -3,9 +3,9 @@
     <div class="container">
         <h1 class="mt-4 mb-4">Search Results</h1>
 
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr class="table-active">
+        <table class="table table-striped table-hover table-light">
+            <thead class="table-dark">
+                <tr>
                     <th>No</th>
                     <th>DATE</th>
                     <th>TIME</th>
@@ -27,6 +27,9 @@
                 {% endfor %}
             </tbody>
         </table>
-        <a class="btn btn-secondary mb-4" href="{{ url_for('booking_list') }}">Back to Booking List</a>
+        <br/>
+        <div class="container mt-4 mb-4" style="text-align: center;">
+            <a class="btn btn-secondary btn-lg mb-4" href="{{ url_for('booking_list') }}">Back to Booking List</a>
+        </div>
     </div>
 {% endblock content %}
