--- a/templates/update.html
+++ b/templates/update.html
@@ -12,7 +12,6 @@
                     <input class="form-control" type="text" id="mobile" name="mobile" value="{{ booking.mobile }}" style="margin-left: 10px; margin-right: 10px;" required>
                     <label for="email">Email: </label>
                     <input class="form-control" type="email" id="email" name="email" value="{{ booking.email }}" style="margin-left: 10px; margin-right: 10px;" required>
-
                 </div>
             </div>
             <div class="form-group mb-4">
@@ -28,14 +27,17 @@
                     <label for="date">Date:</label>
                     <input class="form-control" type="date" id="date" name="date" value="{{ booking.date }}" style="margin-left: 10px; margin-right: 10px;" required>
                     <label for="time">Time:</label>
-                    <input class="form-control" type="time" id="time" name="time" value="{{ booking.time }}" style="margin-left: 10px; margin-right: 10px;" required>
+                    <input class="form-control" type="time" id="time" name="time" value="{{ booking.time }}" style="margin-left: 10px; margin-right: 10px;">
+                    <label for="vehicle">Vehicle:</label>
+                    <input class="form-control" type="text" id="vehicle" name="vehicle" value="{{ booking.vehicle }}" style="margin-left: 10px; margin-right: 10px;">
                 </div>
             </div>
+<!--
             <div class="form-group mb-4">
                 <div class="input-group">
                     <label>Vehicle:</label>
                     <br>
-                    <div class="btn-group-horizontal" id="vehicle">
+                    <div class="btn-group-horizontal" id="vehicle1">
                         <input class="btn-check form-control" type="radio" id="sedan" name="vehicle" value="sedan" required>
                         <label class="btn btn-outline-secondary" style="margin-left: 10px; margin-right: 10px;" for="sedan">Sedan</label>
 
@@ -50,9 +52,12 @@
                     </div>
                 </div>
             </div>
+-->
             <br/>
-            <button class="btn btn-primary mb-4" type="submit">Update</button>
-            <a class="btn btn-secondary mb-4" href="{{ url_for('booking_list') }}">Cancel</a>
+            <div class="container mt-4 mb-4" style="text-align: center;">
+                <button class="btn btn-primary btn-lg mb-4" type="submit">Update</button>
+                <a class="btn btn-secondary btn-lg mb-4" href="{{ url_for('booking_list') }}">Cancel</a>
+            </div>
         </form>
 
     </div>
