--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,9 +10,21 @@ h1 {
     width: 100%;
 }
 
+/*
 td {
     max-width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
+.column {
+    flex: 100%;
+    padding: 10px;
+}
+*/
+
+.table td.fit,
+.table th.fit {
+    white-space: nowrap;
+    width: 1%;
+}
